# oschecks_systemd

./: README.md  requirements.txt  setup.cfg
oschecks_systemd/: check_systemd.py  systemd.py
