[metadata]
name = oschecks_systemd
summary = Monitoring tools for systemd services
description-file =
    README.md
author = Lars Kellogg-Stedman
author-email = lars@redhat.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    oschecks_systemd

[entry_points]
oschecks.check =
    systemd unit active = oschecks_systemd.check_systemd:CheckUnitActive
    systemd unit enabled = oschecks_systemd.check_systemd:CheckUnitEnabled
    systemd unit exists = oschecks_systemd.check_systemd:CheckUnitExists

[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
